# hcca_web_system

./: .coverage  .dockerignore  .en  .env  .env.example  .env.production.example  .env.schema.json  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PRODUCT.md  PROJECT_CONTEXT.md  README.md  README_FOR_CLAUDE.md  REPAIR_VERIFICATION_CHECKLIST.md  UAT_REPAIRS_PROGRESS.md  UAT_TRIAGE_2026-05-15.md  VERSION  dev.ps1  dev.sh  docker-compose.bluegreen.yml  docker-compose.bot.yml  docker-compose.prod.pull.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  posthog-setup-report.md  pyproject.toml  公文系統.md  參考系統功能分析.md  法規公文系統補充.MD  系統功能完整說明書.md  開發企劃書.md
apps/api/: Dockerfile  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 07a5e8808eff_merge_alembic_heads.py  07c994ca2b8f_secure_petition_share_token.py  0875b2aea8fe_drop_unused_meetings_notice_email_.py  0a7c8d9e1f20_add_icon_key_to_partner_tags.py  0f1e2d3c4b5a_add_org_is_active.py  10d60344052b_新增報帳品項稅率.py  10f28626ce9c_整合投稿公告設定.py  18b7eaf4d68e_合併多重_migration_head.py  1a2b3c4d5e6f_remove_phone_fields.py  20260514111243_add_regulation_tsvector.py  20260514143000_add_survey_display_blocks.py  20260515153000_add_allow_external_login_to_users.py  20260517100000_add_image_url_to_survey_questions.py  20260517160000_add_survey_validation_and_respondent_email.py  20260517170000_add_rating_anchor_labels.py  20260517180000_add_email_messages_table.py  20260517190000_add_survey_question_condition.py  20260518100000_add_survey_access_control.py  20260518120000_add_announcement_audience.py  20260518130000_rename_survey_allowed_emails.py  20260519100000_add_article_lineage_id.py  20260519113000_add_record_and_consultation_document_categories.py  20260520100000_add_shop_catalog_and_class_system.py  20260521100000_add_meeting_system.py  20260521110000_add_class_manual_members.py  20260521_meeting_v2_workflow.py  20260522100000_add_meeting_draft_and_notice.py  20260522110000_add_org_bill_stage.py  20260522120000_add_meeting_agenda_attachments.py  20260523100000_class_meal_platform_integration.py  20260524010000_add_partner_map.py  20260524020000_meeting_events_and_voting_class.py  20260524030000_partner_map_engagement.py  20260524040000_add_line_account_links.py  20260524_meeting_floor_control.py  20260525010000_passkeys_push.py  20260525020000_add_defense_rules.py  20260525030000_add_recipient_targets_and_delivery.py  20260525040000_add_exam_papers.py  20260526093000_add_position_category.py  (+137 more)
apps/api/data/class_rosters/: 115_grade2.csv
apps/api/scripts/: backfill_audit_hash_chain.py  export_openapi.py  import_class_roster.py  import_regulations.py  seed_demo.py
apps/api/src/api/: __init__.py  _reload_sentinel.py  discord_worker.py  main.py
apps/api/src/api/core/: anomaly_detection.py  app_settings.py  audit.py  cache.py  celery_app.py  clock.py  config.py  csrf.py  database.py  defense.py  error_audit.py  field_crypto.py  idempotency.py  ip_blocklist.py  load_shed.py  load_signals.py  login_lockout.py  maintenance.py  metrics.py  module_health.py  module_recovery.py  module_registry.py  modules.py  oauth.py  payload_limit.py  performance.py  permission_codes.py  posthog.py  prometheus_metrics.py  query_audit.py  rate_limit.py  recovery.py  redirects.py  request_id.py  search.py  security.py  security_headers.py  sentry.py  statistics.py  structured_logging.py  (+5 more)
apps/api/src/api/dependencies/: api_key_auth.py  auth.py  impersonation_guard.py  permissions.py  policy_consent.py
apps/api/src/api/discord_cogs/: __init__.py  _autocomplete.py  _helpers.py  _regulation_parse.py  _views.py  account_cog.py  admin_cog.py  browse_cog.py  community_cog.py  dashboard_cog.py  documents_cog.py  meal_cog.py  moderation_cog.py  notify_cog.py  personal_cog.py  petitions_cog.py  quick_create_cog.py  regulation_listener_cog.py  system_cog.py  tools_cog.py  work_cog.py
apps/api/src/api/email/: __init__.py  package-lock.json  package.json  renderer.py  sender.py
apps/api/src/api/models/: __init__.py  activity.py  activity_discord.py  activity_link.py  analytics_page_view.py  announcement.py  api_key.py  audit_anchor.py  audit_log.py  backup_record.py  base.py  calendar.py  council_proposal.py  defense.py  discord_account.py  document.py  election.py  email_message.py  exam_paper.py  feature_flag.py  finance.py  google_calendar.py  governance.py  inventory.py  judicial_petition.py  line_account.py  loan.py  meal.py  meeting.py  merchandise_submission.py  navigation_profile.py  notification.py  org.py  outbox.py  partner_map.py  passkey.py  person.py  petition.py  policy.py  publication.py  (+17 more)
apps/api/src/api/routers/: _common.py  (+72 more)
apps/api/tests/: conftest.py  test_activities_router.py  test_activity.py  test_activity_discord.py  test_admin_routes.py  test_admin_system_defense.py  test_analytics_router.py  test_announcement_audience.py  test_announcements.py  test_anomaly_detection.py  test_api_keys.py  test_app_settings.py  test_audit_chain.py  test_audit_router.py  test_auth_flows.py  test_auth_policy.py  test_backup_encryption.py  test_calendar_router.py  test_config_security.py  test_data_lifecycle_tasks.py  test_digest_tasks.py  test_discord_embeds.py  test_discord_governance.py  test_discord_internal.py  test_discord_login.py  test_discord_preferences.py  test_discord_regulation_parse.py  test_discord_router.py  test_discord_sync_tasks.py  test_document_access_service.py  test_document_batch_routes.py  test_document_lifecycle_service.py  test_document_reminder_tasks.py  test_document_serial_service.py  test_document_service.py  test_document_template_service.py  test_document_templates.py  test_documents_approve_router.py  test_documents_attachments_router.py  test_documents_router.py  (+95 more)
apps/discord-bot/: Dockerfile  README.md  env.example  pyproject.toml
apps/discord-bot/src/hcca_discord_bot/: __init__.py  __main__.py  api_client.py  commands.py  config.py  delivery.py  extended_commands.py  main.py
libs/shared/: README.md  pyproject.toml
(+918 files in other folders)
