[project]
name = "campus-platform"
version = "0.1.0"
description = "校園自治整合平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "bcrypt>=5.0.0",
    "boto3>=1.42.88",
    "celery>=5.3.1",
    "coloredlogs>=15.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "fastapi-mail>=1.6.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "line-bot-sdk>=3.23.0",
    "pandas>=3.0.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.24",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "starlette>=0.52.1",
    "uvicorn>=0.44.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "libs/shared",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI 的 Depends() 在函式簽名中使用是標準模式
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["api", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
