[project]
name = "campus-platform"
version = "0.1.0"
description = "校園自治整合平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis>=2.0.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "bcrypt>=5.0.0",
    "boto3>=1.42.88",
    "celery>=5.4.0,<5.6",
    "coloredlogs>=15.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "line-bot-sdk>=3.23.0",
    "pandas>=3.0.2",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.24",
    # redis-py 客戶端版本（非 Redis 伺服器版本）。務必鎖 <6：redis-py 8.x 與
    # kombu Redis broker transport 不相容，會讓 celery worker idle 也 busy-loop 燒 CPU。
    "redis>=5.0,<6.0",
    "sentry-sdk>=2.57.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "starlette>=0.52.1",
    "uvicorn>=0.44.0",
    "weasyprint>=68.1",
    "websockets>=16.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "libs/shared",
]
exclude = ["apps/discord-bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI 的 Depends() 在函式簽名中使用是標準模式
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["api", "shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]

# ── 型別檢查（漸進式採用）─────────────────────────────────────────────────────
# 整個 codebase 一次全綠不現實；改採「乾淨模組 allowlist」由 CI 強制，
# 清理一個模組就加進 files 清單，逐步擴大覆蓋面。新加入前請先本機跑：
#   uv run --project apps/api mypy <module>
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "apps/api/src"
# gate 範圍（安全關鍵模組優先）。乾淨後再往清單加。
files = [
    "apps/api/src/api/core/idempotency.py",
    "apps/api/src/api/core/login_lockout.py",
    "apps/api/src/api/core/anomaly_detection.py",
    "apps/api/src/api/core/field_crypto.py",
    "apps/api/src/api/core/prometheus_metrics.py",
    "apps/api/src/api/core/request_id.py",
    "apps/api/src/api/core/sentry.py",
    "apps/api/src/api/core/structured_logging.py",
    "apps/api/src/api/services/metrics_tasks.py",
    "apps/api/src/api/services/storage.py",
]

[tool.coverage.run]
source = ["apps/api/src/api"]
omit = [
    "*/__pycache__/*",
    "*/email/node_modules/*",
    "*/alembic/*",
]

[tool.coverage.report]
# Ratchet 門檻：以目前實測覆蓋率（~51.5%）為基準、保留小幅 headroom，避免默默下滑。
# 補測試後可逐步調高。
fail_under = 50
show_missing = true
skip_covered = false
