[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ted Huang", email = "ted981026@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "bleach>=6.1.0",
    "celery[redis]>=5.3.1",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.135.3",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "line-bot-sdk>=3.0",
    "markdown-it-py>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt[crypto]>=2.12.1",
    "pyotp>=2.9.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "weasyprint>=68.1",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]
