[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ted Huang", email = "ted981026@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "bleach>=6.1.0",
    "celery[redis]>=5.4.0,<5.6",
    "defusedxml>=0.7.1",
    "fastapi[standard]>=0.135.3",
    "google-auth>=2.53.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "line-bot-sdk>=3.0",
    "markdown-it-py>=3.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyjwt[crypto]>=2.12.1",
    "pyotp>=2.9.0",
    "pypdf>=6.12.0",
    "pywebpush>=2.1.2",
    "python-dotenv>=1.2.2",
    # redis-py 客戶端版本（非 Redis 伺服器版本）。務必鎖 <6：
    # redis-py 8.x 與 kombu Redis broker transport 不相容，會讓 celery worker
    # 即使 idle 也 busy-loop 燒滿 CPU（已實測 redis-py 8 → 150%+，5.x → 0%）。
    "redis>=5.0,<6.0",
    "sentry-sdk[celery,fastapi,sqlalchemy]>=2.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "weasyprint>=68.1",
    "posthog>=7.16.2",
    "prometheus-client>=0.25.0",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.bandit]
# B404/B603: backup services explicitly invoke gpg/tar via subprocess — intentional
# B105: DB enum string values that look like password field names but are not secrets
# B106: OAuth access_token_url is a configuration endpoint, not a hardcoded credential
# B104: _LOCAL_HOSTS frozenset contains "0.0.0.0" as a hostname pattern, not a bind call
per_file_ignores = [
    "apps/api/src/api/services/backup_encryption.py:B404,B603",
    "apps/api/src/api/services/backup_tasks.py:B404,B603",
    "apps/api/src/api/models/document.py:B105",
    "apps/api/src/api/services/meeting/_voting.py:B105",
    "apps/api/src/api/services/official_print.py:B105",
    "apps/api/src/api/core/oauth.py:B106",
    "apps/api/src/api/core/config.py:B104",
    "apps/api/src/api/main.py:B104",
    "apps/api/src/api/email/renderer.py:B704",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.9",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
