[project]
name = "hcca-discord-bot"
version = "0.1.0"
description = "Standalone Discord Bot for the HCCA platform"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hcca_discord_bot"]
