[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ted Huang", email = "ted981026@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic[email]>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
